--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = org.jetbrains.plugins.template
-pluginName = IntelliJ Platform Plugin Template
-pluginRepositoryUrl = https://github.com/JetBrains/intellij-platform-plugin-template
+pluginGroup = com.ciandt
+pluginName = Flow Chat AI
+pluginRepositoryUrl = https://github.com/brunopuppdev/flow-chat-ai-plugin-jetbrains.git
 # SemVer format -> https://semver.org
-pluginVersion = 2.1.0
+pluginVersion = 1.0.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 242
@@ -18,7 +18,7 @@ platformVersion = 2024.2.5
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins =
+platformBundledPlugins = PythonCore, JavaScript, PHP
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.13
