--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,15 +1,24 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>org.jetbrains.plugins.template</id>
-    <name>IntelliJ Platform Plugin Template</name>
-    <vendor>JetBrains</vendor>
-
+    <id>com.ciandt.flowplugin</id>
+    <name>Flow Chat AI</name>
+    <version>1.0</version>
+    <vendor>CI&amp;T</vendor>
+    <description>
+        Assistente de IA para desenvolvimento, documentação, revisão de código e muito mais, integrado ao terminal e com histórico.
+    </description>
     <depends>com.intellij.modules.platform</depends>
 
-    <resource-bundle>messages.MyBundle</resource-bundle>
-
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="org.jetbrains.plugins.template.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
-        <postStartupActivity implementation="org.jetbrains.plugins.template.startup.MyProjectActivity" />
+        <toolWindow
+                id="Flow"
+                anchor="RIGHT"
+                factoryClass="com.ciandt.flowplugin.FlowToolWindowFactory"
+                secondary="true"
+        />
     </extensions>
+
+    <actions>
+        <!-- Futuro: Ações de menu podem ser adicionadas aqui -->
+    </actions>
 </idea-plugin>
